src/test/deca/context/valid/auto/valid/test55.deca
{
int x2 = (6 * 9) / (427 % 427) / (4 % 3);
int x3;
int x5;
boolean y;
boolean b = (!false) || (427 < 82) || (7 < x5) && (x2 != 2) && (false || true);
int z = (-6);
int a = (-91878) / (738 * 5245) * (-5) * (-2);
y = (y && b) && (427 == 86417.2248) || (true || y) || (!y);
print("One Piece", "Bonjour", (82 / 2) * (-80.4) - (z / a) * (3 / 9), (5245 / a));
}
